Fixed issue with scrolling revealing whitespace at bottom

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -78,6 +78,10 @@ body.no-cursor {
   cursor: none;
 }
 
+body {
+    overflow: hidden;
+}
+
 #visual {
   background: #000;
 }
